erDiagram

    USER {
        ObjectId id PK
        int optixId
        boolean isAdmin
        string fullname
        string email
        string phone
        ObjectId[] teamIds
        enum[] notifPrefs "email | text"
    }

    TEAM {
        ObjectId id PK
        int optixId
        string name
    }

    MAILBOX {
        ObjectId id PK
        enum type "user | team"
        ObjectId refId
        string displayName
    }

    MAIL {
        ObjectId id PK
        datetime date
        enum type "letter | package"
        int count
    }

    %% Relationships
    USER }|--o{ TEAM : belongs_to

    USER ||--|| MAILBOX : owns
    TEAM ||--|| MAILBOX : owns

    MAILBOX ||--o{ MAIL : contains
